--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ build/
 .DS_Store
 
 # Logs
-logs
+logs/
 *.log
 
 # Coverage
@@ -37,5 +37,5 @@ coverage/
 # Build artifacts
 *.tgz
 
-# Credentials
+# Credentials (игнорируем только сам файл, а не папку)
 credentials/google-credentials.json
